<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:background="@drawable/background_image2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/mainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/autour_one"
                android:gravity="center"
                android:text="@string/register_here_please"
                android:textColor="#031067"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_your_first_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="2dp"
                android:textColor="#0B0A0A"
                android:textColorHint="#F4EFEF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainText"/>

            <EditText
                android:id="@+id/lastName"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_your_last_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="2dp"
                android:textColor="#0B0A0A"
                android:textColorHint="#F4EFEF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstName"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/enter_your_email_id"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="2dp"
                android:textColor="#0B0A0A"
                android:textColorHint="#F4EFEF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastName"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/countryCode"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/cc"
                    android:text="@string/_91"
                    android:inputType="phone"
                    android:maxLength="3"
                    android:padding="2dp"
                    android:textColor="#040303"
                    android:textColorHint="#F3EEEE"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.62"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email"/>

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/enter_your_phone_number"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:padding="2dp"
                    android:textColor="#0B0A0A"
                    android:textColorHint="#F4EFEF"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/countryCode"
                    tools:ignore="SpeakableTextPresentCheck"/>

        </LinearLayout>

            <EditText
                android:id="@+id/age"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/enter_your_age"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="2dp"
                android:textColor="#0B0A0A"
                android:textColorHint="#F4EFEF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
                tools:ignore="SpeakableTextPresentCheck"/>

            <TextView
                android:id="@+id/genderText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:text="@string/select_your_gender"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#ffffff"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/age"
                />
            <!-- add RadioGroup which contain the many RadioButton-->
            <RadioGroup
                android:id="@+id/gender"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/genderText">

                <!-- In RadioGroup create the 1 Radio Button-->
                <!-- like this we will add some more Radio Button-->
                <RadioButton
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/female"
                    android:text="@string/female"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textColor="#ffffff"/>

                <RadioButton
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/male"
                    android:text="@string/male"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textColor="#ffffff"/>

            </RadioGroup>

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:ems="10"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_your_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="2dp"
                android:textColor="#0B0A0A"
                android:textColorHint="#F4EFEF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:ems="10"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_your_confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="2dp"
                android:textColor="#0B0A0A"
                android:textColorHint="#F4EFEF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                tools:ignore="SpeakableTextPresentCheck"/>

            <Button
                android:id="@+id/register"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/register"
                android:textSize="15sp"
                app:backgroundTint="#1976d2"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/wanna_login_click_here"
                android:textColor="#083FCA"
                android:fontFamily="@font/acme"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:indeterminateDrawable="@drawable/gif_loader_img1"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/loginText" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>