<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image2"
    tools:context=".LoginEmail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image2"
        android:padding="5dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="102dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:fontFamily="@font/autour_one"
                android:gravity="center"
                android:text="@string/login_here_please"
                android:textColor="#031067"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.59"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_your_email_id"
                android:inputType="textEmailAddress"
                android:padding="2dp"
                android:textColor="#040303"
                android:textColorHint="#F3EEEE"
                android:textSize="20sp"
                android:background="@drawable/backgroundbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.62"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainText"/>

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="2dp"
                android:textColor="#0B0A0A"
                android:textColorHint="#F4EFEF"
                android:textSize="20sp"
                android:background="@drawable/backgroundbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <Button
                android:id="@+id/loginVerify"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:backgroundTint="#1976d2"
                android:background="@drawable/backgroundbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <Button
                android:id="@+id/loginPhoneNumberText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login_via_phone_number"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:backgroundTint="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <TextView
                android:id="@+id/forgetPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/forget_password_click_here"
                android:textColor="#083FCA"
                android:fontFamily="@font/acme"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginPhoneNumber" />


            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/wanna_register_click_here"
                android:textColor="#0D47A1"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgetPasswordText"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:indeterminateDrawable="@drawable/gif_loader_img1"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/loginEmailText" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>