<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword"
    android:background="@drawable/background_image9">

    <LinearLayout
        android:id="@id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageSnapUp"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/shopping_icon" />

            <TextView
                android:id="@+id/textSnapUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/aclonica"
                android:layout_gravity="center_vertical"
                android:text="SNAP UP"
                android:textColor="#023A6E"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/autour_one"
        android:gravity="center"
        android:text="Enter your registered e-mail id here!"
        android:textColor="#031067"
        android:textSize="26sp"
        android:textStyle="bold" />

        <EditText
            android:id="@+id/registeredEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_your_email_id"
            android:inputType="textEmailAddress"
            android:padding="2dp"
            android:textColor="#040303"
            android:textColorHint="#F3EEEE"
            android:textSize="20sp"
            android:background="@drawable/backgroundbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.62"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainText"/>

        <TextView
            android:id="@+id/linkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/click_on_send_link_to_send_password_reset_link_to_your_registered_e_mail_id"
            android:textColor="#06199A"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/linkSendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="SEND LINK"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="#1976d2"
            android:background="@drawable/backgroundbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registeredEmail" />

        <TextView
            android:id="@+id/backLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/go_back_to_login_e_mail_screen_click_back_to_login_button"
            android:textColor="#06199A"
            android:textSize="24sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/backLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="Back to Login"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:backgroundTint="@android:color/transparent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:indeterminateDrawable="@drawable/gif_loader_img1"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/emailVerifyBtn" />


    </LinearLayout>

</ScrollView>